ACL-78 Fix image alignment issue

--- a/src/containers/ListingPage.css
+++ b/src/containers/ListingPage.css
@@ -146,7 +146,3 @@
 .img-drag {
     height: 80px;
 }
-.image-container{
-    display:inline-block;
-    height: 80px;
-}
